--- a/music_viewer/bower.json
+++ b/music_viewer/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "jquery": "^2.2.2",
-    "backbone": "^1.3.2"
+    "backbone": "^1.3.2",
+    "handlebars": "^4.0.5"
   }
 }
